--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
   <body>
     <div id="app">
       <h1>🎈 Welcome to PartyKit!</h1>
+      <div id="messages_box"></div>
+      <div id="text_input_box">
+        <input type="text" id="text_field" class="generic_text_input"/>
+        <button id="send_button" class="generic_button">Send</button>
+      </div>
     </div>
     <script type="module" src="/dist/client.js"></script>
   </body>
